# MOXY-evals

./: .replit  README.md  main.py  pyproject.toml  requirements.txt
.oxen/: HEAD  config.toml
.oxen/merge/: IDENTITY
.oxen/refs/: 000115.sst  000119.sst  IDENTITY  MANIFEST-000116  MANIFEST-000121  OPTIONS-000123
attached_assets/: Pasted-Thought-for-11-seconds-The-failure-means-the-oxen-CLI-binary-isn-t-on-PATH-MOXY-print-1746311261929.txt
results/capital_test/: 20250503T225644Z_0161772ffb2c4700b3ab7c91a3e7dbd5.json  20250503T230108Z_543f349dfc0244958bad96c81f728b94.json  20250503T230108Z_543f349dfc0244958bad96c81f728b94.md  20250503T230127Z_665a30d91db74680acc937647d1d5536.json  20250503T230127Z_665a30d91db74680acc937647d1d5536.md  20250503T230237Z_76e2c6b998c7423c9b3fccf34bc163ae.json  20250503T230237Z_76e2c6b998c7423c9b3fccf34bc163ae.md  20250503T230428Z_8c06bea2867941dfa6641afb398f9dab.json  20250503T230428Z_8c06bea2867941dfa6641afb398f9dab.md  20250503T230457Z_e72a6399e3b24e73a18e229797ca254c.json  20250503T230457Z_e72a6399e3b24e73a18e229797ca254c.md  20250503T230517Z_0b4816402a5641e288f2f1c3a5e170d9.json  20250503T230517Z_0b4816402a5641e288f2f1c3a5e170d9.md  20250503T230601Z_038e3262a9bb461782ea69d4d087c85b.json  20250503T230601Z_038e3262a9bb461782ea69d4d087c85b.md  20250503T230748Z_31d57b4f4a1f4fe6b39d3231d7bf8293.json  20250503T230748Z_31d57b4f4a1f4fe6b39d3231d7bf8293.md  20250503T230812Z_1c308a120f5341afb4b305ab8e99eb1e.json  20250503T230812Z_1c308a120f5341afb4b305ab8e99eb1e.md  20250503T230848Z_c0bed24bc1d84310a2dfa3609e47c8b7.json  (+43 more)
(+298 files in other folders)
